# PlanKiller

./: .env.example  .gitignore  AGENTS.md  AI_HANDOFF.md  AI_REVIEW.md  CLAUDE.md  README.md  findings.md  progress.md  task_plan.md
apps/api/: Dockerfile  api-server.spec  build.ps1  requirements.txt  run_server.py
apps/api/app/: config.py  database.py  main.py  memory.py  models.py  schemas.py  services.py  worker.py
apps/api/app/routers/: ai.py  habits.py  health.py  memory.py  plans.py  qq.py  reminders.py
apps/api/tests/: test_api.py
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: api.ts  main.tsx  styles.css  utils.ts
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/pages/: AiPage.tsx  HabitPage.tsx  HistoryPage.tsx  HomePage.tsx  MemoryPage.tsx  PlanPage.tsx  ReviewPage.tsx  SettingsPage.tsx
docs/: development-workflow.md  nas-deploy.md  ui-mockup.html
docs/agent-work/: AI_CODEX_AUDIT.md  AI_CODEX_PROMPT.md  AI_CODEX_RESULT.md  AI_HANDOFF.md  AI_REVIEW.md
docs/superpowers/plans/: 2026-05-13-ui-redesign.md  2026-05-14-tauri-desktop-bundle.md
docs/superpowers/specs/: 2026-05-13-ui-redesign-design.md
infra/: backup.ps1  backup.sh  docker-compose.yml
