[package]
name = "plankiller"
version = "0.1.0"
description = "Daily planning and habit supervision desktop client"
authors = ["PlanKiller"]
edition = "2021"

[lib]
name = "plankiller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
